<?xml version="1.0"?>
<package format="2">
  <name>aiorospy</name>
  <version>0.0.0</version>
  <description>Asyncio wrapper around rospy I/O interfaces.</description>

  <maintainer email="ablakey@locusrobotics.com">Andrew Blakey</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>actionlib</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>

  <test_depend>roslint</test_depend>

  <export>
    <pip_requirements>requirements.txt</pip_requirements>
  </export>

</package>
