<?xml version="1.0"?>
<package format="2">
  <name>aiorospy_examples</name>
  <version>0.0.0</version>
  <description>Example scripts using aiorospy.</description>

  <maintainer email="ablakey@locusrobotics.com">Andrew Blakey</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>catkin_virtualenv</build_depend>

  <depend>python3.6</depend>

  <exec_depend>aiorospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>

  <test_depend>roslint</test_depend>

</package>
